04-kustomize-challenge/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kustom-web
spec:
  selector:
    app: kustom-web
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
