04-kustomize-challenge/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kustom-web
spec:
  to:
    kind: Service
    name: kustom-web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
